chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: piano-tutor
spec:
  selector:
    app: piano-tutor
  ports:
    - name: http
      port: 80
      targetPort: 80
